fix text align

--- a/src/styles/Venda.scss
+++ b/src/styles/Venda.scss
@@ -43,6 +43,10 @@
                 flex-direction: column;
                 align-items: center;
 
+                .price-info{
+                    text-align: center;
+                }
+
                 .wrapper-button{
                     .button{
                         margin: 20px;
